@@ -1,5 +1,11 @@
 #!/usr/bin/env python
 
+# Author: David Goodger
+# Contact: goodger@users.sourceforge.net
+# Revision: $Revision$
+# Date: $Date$
+# Copyright: This module has been placed in the public domain.
+
 """
 Generates .html from all the .txt files in a directory.
 
